syntax = "proto3";

package org.project_planton.provider.gcp.gcpcertmanagercert.v1;

import "buf/validate/validate.proto";
import "org/project_planton/shared/foreignkey/v1/foreign_key.proto";
import "org/project_planton/shared/options/options.proto";

// GcpCertManagerCertSpec defines the fields needed to provision a public SSL certificate
// via Google Certificate Manager or Google-managed SSL certificates for Load Balancers,
// using DNS validation with Google Cloud DNS.
message GcpCertManagerCertSpec {
  // gcp_project_id is the ID of the GCP project where the certificate will be created.
  // This is a required field.
  string gcp_project_id = 1 [(buf.validate.field).required = true];

  // primary_domain_name is a required field representing the main (apex or wildcard) domain name.
  // Examples include "example.com" or "*.example.com" (wildcard).
  // This domain will be set as the primary domain in the GCP certificate.
  //
  // The pattern enforces a domain-like structure, allowing an optional wildcard prefix.
  // The string is mandatory, so users must always supply a primary domain.
  string primary_domain_name = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {pattern: "^(?:\\*\\.[A-Za-z0-9\\-\\.]+|[A-Za-z0-9\\-\\.]+\\.[A-Za-z]{2,})$"}
  ];

  // alternate_domain_names is an optional list of Subject Alternative Names (SANs) for the certificate.
  // Each entry must follow the same pattern as primary_domain_name and cannot contain duplicates.
  // Primary domain should not be added to this list.
  repeated string alternate_domain_names = 3 [
    (buf.validate.field).repeated.unique = true,
    (buf.validate.field).repeated.items = {
      string: {pattern: "^(?:\\*\\.[A-Za-z0-9\\-\\.]+|[A-Za-z0-9\\-\\.]+\\.[A-Za-z]{2,})$"}
    }
  ];

  // cloud_dns_zone_id is the identifier of the Cloud DNS managed zone
  // where DNS validation records will be created automatically.
  // Must be a public managed zone matching the domain names.
  // Example: "my-dns-zone" or a full zone name.
  org.project_planton.shared.foreignkey.v1.StringValueOrRef cloud_dns_zone_id = 4 [
    (buf.validate.field).required = true,
    (org.project_planton.shared.foreignkey.v1.default_kind) = GcpDnsZone,
    (org.project_planton.shared.foreignkey.v1.default_kind_field_path) = "status.outputs.zone_name"
  ];

  // certificate_type indicates which type of certificate to create.
  // MANAGED uses Google Certificate Manager (newer, more flexible).
  // LOAD_BALANCER uses Google-managed SSL certificates (classic, for load balancers).
  // By default, MANAGED is used.
  optional CertificateType certificate_type = 5 [(org.project_planton.shared.options.default) = "MANAGED"];

  // validation_method indicates how the certificate verifies domain ownership.
  // By default, DNS validation is used.
  optional string validation_method = 6 [
    (org.project_planton.shared.options.default) = "DNS",
    (buf.validate.field).string = {
      in: ["DNS"]
    }
  ];
}

// CertificateType defines the type of certificate to create in GCP.
enum CertificateType {
  // MANAGED creates a certificate using Google Certificate Manager.
  // This is the newer, more feature-rich option.
  MANAGED = 0;

  // LOAD_BALANCER creates a Google-managed SSL certificate.
  // This is the classic option, typically used with load balancers.
  LOAD_BALANCER = 1;
}
