syntax = "proto3";

package project.planton.provider.gcp.gkeaddonbundle.v1;

import "buf/validate/validate.proto";

message GkeAddonBundleSpec {
  // The GCP project ID in which the GKE cluster exists.
  string cluster_project_id = 1 [
    (buf.validate.field).required = true
  ];

  // Istio addon configuration
  GkeAddonBundleIstio istio = 2;

  // A flag to control the installation of the PostgreSQL operator.
  bool install_postgres_operator = 3;

  // A flag to control the installation of the Kafka operator.
  bool install_kafka_operator = 4;

  // A flag to control the installation of the Solr operator.
  bool install_solr_operator = 5;

  // A flag to control the installation of Kubecost.
  bool install_kubecost = 6;

  // A flag to control the installation of Ingress NGINX.
  bool install_ingress_nginx = 7;

  // A flag to control the installation of Cert-Manager.
  bool install_cert_manager = 8;

  // A flag to control the installation of External DNS.
  bool install_external_dns = 9;

  // A flag to control the installation of External Secrets.
  bool install_external_secrets = 10;

  // A flag to control the installation of the Elastic operator.
  bool install_elastic_operator = 11;

  // A flag to control the installation of the Keycloak operator.
  bool install_keycloak_operator = 12;
}

message GkeAddonBundleIstio {
  // A flag to control the installation of the Istio addon.
  bool enabled = 1;
  // The GCP region in which the GKE cluster exists.
  string cluster_region = 2 [
    (buf.validate.field).required = true
  ];
  // The GCP sub-network self-link in which the GKE cluster exists.
  string sub_network_self_link = 3 [
    (buf.validate.field).required = true
  ];
}
